syntax = "proto3";
option go_package = ".;proto";
package helloworld;

import "google/api/annotations.proto";
// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/v1/example/echo"
      body: "*"
    };
  }
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
/*
protoc --proto_path=./proto --go_out=./proto --go_opt=paths=source_relative --go-grpc_out=./proto --go-grpc_opt=paths=source_relative ./proto/helloworld/hello_world.proto
*/

/*
protoc --proto_path=./proto ^
   --go_out=./proto --go_opt=paths=source_relative ^
   --go-grpc_out=./proto --go-grpc_opt=paths=source_relative ^
   ./proto/helloworld/hello_world.proto


protoc --proto_path=./proto --go_out=./proto --go_opt=paths=source_relative --go-grpc_out=./proto --go-grpc_opt=paths=source_relative --grpc-gateway_out=./proto --grpc-gateway_opt=paths=source_relative ./proto/helloworld/hello_world.proto
*/